other minor alignment issues

--- a/css/chooseStyle.css
+++ b/css/chooseStyle.css
@@ -6,8 +6,8 @@ body {
 }
 
 .choose-background {
-    height: 100vh;
-    width: 100%;
+    min-height: 100vh;
+    min-width: 100%;
     display: flex;
     align-items: center;
 }
@@ -60,7 +60,7 @@ a:hover {
 
 #title {
     font-family: 'Bungee Inline', 'Impact', sans-serif;
-    font-size: 7vw;
+    font-size: 6vw;
     margin-bottom: 3vw; 
     color: #A33327;
 }
@@ -73,12 +73,15 @@ a:hover {
 
 #galleries > div {
     color: #AD8174;
-    height: 20vw;
+    height: 10vw;
     background-color: #222223;
     padding: 2vw;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 5vw;
-    text-align: left;
+    font-family: 'Impact', sans-serif;
+    font-size: 4vw;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 768px) {
@@ -86,9 +89,10 @@ a:hover {
      grid-template-columns: auto;
  }  
  #galleries > div {
-     display: flex;
-     align-items: center;
-     justify-content: center;
      font-size: 8vw;
+     height: 20vw;
  } 
+ #title {
+     font-size: 7vw;
+ }
 }
