--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -2,9 +2,9 @@ body {
     background-color: #222223;
 }
 
-.index-background {
-    height: 100vh;
-    width: 100vw;
+#index-background {
+    min-height: 100vh;
+    min-width: 100vw;
     display: flex;
     align-items: center;
 }
